horizontal scroll removal - fix

--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -1,5 +1,5 @@
 .container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url("/assets/bg-404.png");
     display: flex;
