--- a/styles/SingleProject.module.css
+++ b/styles/SingleProject.module.css
@@ -1,5 +1,5 @@
 .single {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: var(--background);
   display: flex;
@@ -8,7 +8,7 @@
 }
 
 .video_card{
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   object-fit: cover;
